css changes to fix display issues on iPhone

--- a/scss/navigation/_mobile-menu.scss
+++ b/scss/navigation/_mobile-menu.scss
@@ -15,9 +15,7 @@
     width: 75vw;
     height: 100%;
     background: $heritage;
-    display: flex;
     align-items: center;
-    flex-direction: column;
     overflow-x: hidden;
     overflow-y: scroll;
 
@@ -248,11 +246,14 @@
       margin: 0;
       border-radius: 2.5px;
       zoom: 0.8;
+      a {
+        font-size: 1.3rem;
+      }
     }
     .utility-nav {
       display: flex;
       flex: 0.65;
-      padding-bottom: 0.5rem;
+      padding-bottom: 12rem;
 
       ul {
         flex-direction: column;
